Bug 499712 - The sorting function works once only when initially applied, but subsequent sorting attempts do not trigger any changes. The list only re-sorts to the desired order after restarting the program.
Summary: The sorting function works once only when initially applied, but subsequent s...
Status: RESOLVED FIXED
Alias: None
Product: kasts
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: bart
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-09 06:04 UTC by nokake5068
Modified: 2025-02-09 14:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nokake5068 2025-02-09 06:04:01 UTC
SUMMARY
The sorting function works once only when initially applied, but subsequent sorting attempts do not trigger any changes. The list only re-sorts to the desired order after restarting the program.

STEPS TO REPRODUCE
1. Go to a podcast and sort by date (choose either newer first or older first [opposite of the current sorting order]). It will sort, but then when you sort again to the opposite order, it won't render the sorting.
2. Close the program.
3. Reopen, and the sort option order is rendered correctly.

OBSERVED RESULT
Doesn't render sort order in a common specific circumstance.

EXPECTED RESULT
Should sort when requested, without closing and re-opening the application.

SOFTWARE/OS VERSIONS
Windows: N/A
macOS: N/A
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Fedora Linux KDE Spin
KDE Plasma Version: Latest Fedora
KDE Frameworks Version: Latest Flatpak
Qt Version: Latest Flatpak

ADDITIONAL INFORMATION
Kasts is one of the best and only maintained open source podcast application for desktop that I know of. I would love to see it grow, aesthetically, and functionally just like Elisa music player and other awesome KDE applications. Thanks for the work of the developers, I will do my best to help KDE and its applications however I can.
Comment 1 bart 2025-02-09 13:36:23 UTC
Confirmed.  Thanks for reporting!  I'll try to fix it as soon as possible.
Comment 2 Bug Janitor Service 2025-02-09 14:20:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kasts/-/merge_requests/241
Comment 3 bart 2025-02-09 14:29:39 UTC
Git commit e0f210df643ad46aa9f350ba918ccd0b9ee27bb3 by Bart De Vries.
Committed on 09/02/2025 at 14:19.
Pushed by bdevries into branch 'master'.

Fix sort order in episode lists

M  +1    -1    src/models/abstractepisodeproxymodel.cpp

https://invent.kde.org/multimedia/kasts/-/commit/e0f210df643ad46aa9f350ba918ccd0b9ee27bb3
Comment 4 bart 2025-02-09 14:31:11 UTC
Git commit 084cfa204868e58c133e02a4b48d4598ebaed1e2 by Bart De Vries.
Committed on 09/02/2025 at 14:30.
Pushed by bdevries into branch 'release/24.12'.

Fix sort order in episode lists

M  +1    -1    src/models/abstractepisodeproxymodel.cpp

https://invent.kde.org/multimedia/kasts/-/commit/084cfa204868e58c133e02a4b48d4598ebaed1e2
Comment 5 bart 2025-02-09 14:32:53 UTC
It was just a dumb typo in the source.  Fix should be in the next release (24.12.3).