Fix sort order in episode lists

BUG: 499712